--- a/frontend/src/components/LandingPage/LandingPage_HowToStart/LandingPage_HowToStart.module.css
+++ b/frontend/src/components/LandingPage/LandingPage_HowToStart/LandingPage_HowToStart.module.css
@@ -9,7 +9,8 @@
 .title {
   /* top: 10%; */
   font-size: 28px;
-  margin-bottom: 6rem;
+  margin-top: -7%;
+  margin-bottom: 7%;
   color: white;
 }
 
